# nuggets

./: .env  Dockerfile  alembic.ini  main.py  profile_results.txt  pyproject.toml
api/: main.py
api/routes/: notes.py  users.py  utils.py
core/: config.py  db.py  models.py  queries.py  utils.py
core/db/: main.py
core/db/models/: users.py
migrations/: env.py
migrations/versions/: 430116279921_initial_migration.py  fb5b39f4f098_added_new_tables.py
templates/: base.html  dashboard.html  index.html  login.html  note_form.html  notes_list.html
